service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31111
  selector:
    app: myapp-deploy
